--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Prata", serif;
+  overflow-x: hidden;
 }
 .nav-list li {
   margin-right: 15px;
@@ -116,7 +117,7 @@ a:visited {
 }
 .logo-container {
   background-color: #ef8ed5;
-  width: 700px;
+  width: 100%;
   height: 150px;
   display: flex;
   align-items: center;
@@ -128,7 +129,7 @@ a:visited {
   margin: 20px;
   text-align: justify;
   text-align: center;
-  width: 700px;
+  width: 100%;
 }
 .image-container {
   width: auto;
@@ -144,11 +145,14 @@ a:visited {
   max-height: 50%;
   width: auto;
   height: auto;
+  max-width: 100%;
 }
 #main_page_copy {
   text-align: left;
+  max-width: 100%;
 }
 .footer {
+  max-width: 100%;
   font-size: medium;
   background-color: black;
   color: white;
